Hide doesn't work on particle systems #41113

Closed
opened 2014-07-17 22:07:12 +02:00 by Anna Celarek · 5 comments

System Information
Win7, gtx 550 Ti

Blender Version
Broken: 2.71 f46223f (2014-07-17) and 5588e45 (2014-06-30)
Worked: 29e8c46 (2014-06-14) and previous

Short description of error
Hide doesn't work on objects with particle systems, emitter and particles are still visible when the object is hidden. No matter if hair or normal particles.

Exact steps for others to reproduce the error
I'm attaching a file with hidden objects. Press Alt H to unhide, H to hide, nothing happens. Also attaching a screenshot of the problem.

psys_hide.jpg
psys_hide.blend

**System Information** Win7, gtx 550 Ti **Blender Version** Broken: 2.71 f46223f (2014-07-17) and 5588e45 (2014-06-30) Worked: 29e8c46 (2014-06-14) and previous **Short description of error** Hide doesn't work on objects with particle systems, emitter and particles are still visible when the object is hidden. No matter if hair or normal particles. **Exact steps for others to reproduce the error** I'm attaching a file with hidden objects. Press Alt H to unhide, H to hide, nothing happens. Also attaching a screenshot of the problem. ![psys_hide.jpg](https://archive.blender.org/developer/F98344/psys_hide.jpg) [psys_hide.blend](https://archive.blender.org/developer/F98346/psys_hide.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AnnaCelarek

Added subscriber: @AnnaCelarek
Bastien Montagne self-assigned this 2014-07-17 23:22:28 +02:00

This issue was referenced by 8620008ccd

This issue was referenced by 8620008ccdda5ca7d7b83cb6b1a24e62f881ee84

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8620008ccd.

Closed by commit 8620008ccd.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41113
No description provided.